2001-12-06  Philippe Elie  <ph_e@club-internet.fr>

	* dae/oprofiled.h:
	* dae/opd_proc.c: separate stats for kernel
	  and modules address space and minor cleanup

2001-12-05  Philippe Elie  <ph_e@club-internet.fr>

	* Rules.make.in:
	* dae/Makefile.in:
	* events/Makefile.in:
	* pp/Makefile.in: 
	* util/Makefile.in: tidy
	* module/Makefile.in:
	* gui/Makefile.in: use auto-deps

	* util/child_reader.h: allow to compile with -ansi
	* util/child_reader.cpp: fix memory leak fix
	* pp/oprofpp.cpp: fix memory leak

	* TODO: update

2001-12-05  Philippe Elie  <ph_e@club-internet.fr>

	* autogen.sh: use autoheader to create config.h
	* configure.in: handle missing libiberty.h and
	  missing xcalloc in libiberty.a
	* dae/opd_util.cpp:
	* dae/opd_proc.c: 
	* dae/opd_util.h:
	* dae/oprofiled.c:
	* evets/Makefile.in
	* pp/oprof_convert.c:
	* pp/oprofpp.cpp:
	* pp/oprofpp_util.cpp: replace opd_malloc() and related
	  by xmalloc.
	* util/op_popt.c: add call to xmalloc_set_program_name()
	* ./cvsignore: add config.h, config.h.in

2001-12-04  Dave Jones <davej@suse.de>

	* events/op_events_desc.c:
	  Add recognition for alternative PIII string.
	  Reported by Lev Iserovich <lev@ciprico.com>
	
2001-12-04  Philippe Elie  <ph_e@club-internet.fr>

	* dae/opd_util.c:
	* dae/opd_util.c: move common fuctionnality to ...
	* util/file_manip.h
	* util/file_manip.c: here
	* pp/oprof_convert.c: reflect above change
	* pp/oprof_convert.c:
	* pp/opf_filter.cpp: ditto + minor cleanup
	* gui/Makefile.in:
	* pp/Makefile.in: reflect above change

2001-12-02  Philippe Elie  <ph_e@club-internet.fr>

	* pp/oprofpp.h:
	* pp/oprofpp.cpp:
	* pp/oprofpp_util.cpp:
	* pp/opf_filter.cpp: small tidies

2001-12-01  Philippe Elie  <ph_e@club-internet.fr>

	* Makefile.in: build util sub-dir first

	* dae/opd_util.h:
	* dae/opd_util.c: move opd_GetContext() ...
	* util/opd_popt.h:
	* util/opd_popt.c: in these new files

	* pp/oprofpp.cpp:
	* pp/opf_filter.cpp:
	* pp/op_time.cpp: